Shrink gap between facets; fixes #1546 (#1561)

--- a/app/assets/stylesheets/modules/blacklight_overrides.scss
+++ b/app/assets/stylesheets/modules/blacklight_overrides.scss
@@ -7,6 +7,10 @@
   padding: $padding-base-vertical 0;
 }
 
+.facet-limit {
+  margin-bottom: 7px;
+}
+
 .constraints-container {
   background-color: transparent;
   border: 0;
